examples/test/testpolicy14070.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14070
  namespace: namespace199
spec:
  podSelector:
    matchLabels:
      key5: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value4
          key25: value20
      podSelector:
        matchLabels:
          key0: value32
          key35: value42
          key17: value30
